# attackmate-api-server

./: .gitignore  .pre-commit-config.yaml  README.md  auth_utils.py  env-example  log_utils.py  main.py  pyproject.toml  schemas.py  state.py  utils.py
.github/workflows/: python-app.yml
routers/: commands.py  instances.py  playbooks.py
src/attackmate_api_server/: auth_utils.py  config.py  create_hashes.py  log_utils.py  main.py  metadata.py  schemas.py  state.py  utils.py
src/attackmate_api_server/routers/: commands.py  instances.py  playbooks.py
test/units/: test_commands.py  test_main.py
