[project]
name = "attackmate-api-server"
description = "API server for remote control and execution of AttackMate instances."
authors = [
    {name = "Thorina Boenke", email = "thorina.boenke@ait.ac.at"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "EUPL-1.2"}

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "colorlog",
    "pydantic",
    "python-multipart",
    "passlib[bcrypt]",
    "argon2-cffi",
    "python-dotenv",
    "pytest-asyncio",
    "pytest",
    "attackmate",
    "pytest-asyncio",
    "mypy>=1.19.1",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "prek>=0.2.8",
    "pytest>=8.4.1",
    "pytest-mock",
    "pytest-cov>=6.2.1",
    "types-requests",
]


[project.scripts]
attackmate-api = "attackmate_api_server.main:start"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = true
where = ["src"]

[tool.setuptools.dynamic]
version = {attr = "attackmate_api_server.metadata.__version__"}

[tool.flake8]
max-line-length = 110
extend-ignore = ["E203", "W503"]

[tool.uv.sources]
attackmate = { path = "../attackmate", editable = true }

[[tool.mypy.overrides]]
modules = [
    "test.*",
    "test_commands"
]
# Allows to use @pytest.fixture without mypy complaining
disallow_untyped_decorators = false
# Allows to skip "-> None" on test functions
disallow_untyped_defs = false
# Allows to skip type hints for arguments in fixtures
check_untyped_defs = false
